# pysilfont

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  INSTALL.txt  LICENSE  MANIFEST.in  Pipfile  README.md  README.txt  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  update_headers.py
.github/workflows/: main.yml
actionsosx/UFO Normalize.workflow/Contents/: Info.plist  document.wflow
docs/: complex-text-with-pysilfont-guide.txt  complex-text-with-pysilfont.ipynb  composite.md  docs.md  examples.md  fea2_proposal.md  feaextensions.md  feax_future.md  parameters.md  release.md  scripts.md  technical.md  tests.md  ufo.md
examples/: FFmapGdlNames.py  FFmapGdlNames2.py  FLWriteXml.py  FTMLnorm.py  FTaddEmptyOT.py  accesslibplist.py  chaindemo.py  fbchecks.py  fbonecheck.py  fbttfchecks.py  ffchangeglyphnames.py  ffcopyglyphs.py  ffremovealloverlaps.py  inflator.py  makeGdl.py  preflight  psfaddGlyphDemo.py  psfbuildcompgc.py  psfcheckclassorders.py  psfdupglyphsfp.py  psfexpandstroke.py  psfexportnamesunicodesfp.py  psfgenftml.py  psfglyphs2ufo.py  psfmakedeprecated.py  psfremovegliflibkeys.py  psftidyfontlabufo.py  psftoneletters.py  psfversion.py  wsl-fix-exec-bit.py  xmlDemo.py
examples/fontforge-old/: FFaddPUA.py  FFcheckDupUSV.py  FFcolourGlyphs.py  FFcompareFonts.py  FFdblEncode.py  FFfromAP.py  FFlistAPNum.py  FFlistGlyphNames.py  FFlistGlyphinfo.py  FFlistRefNum.py  FFnameSearchNReplace.py  FFundblEncode.py  demoAddToMenu.py  demoExecuteScript.py  demoFunctions.py
examples/gdl/: __init__.py  font.py  glyph.py  makeGdl.py  ot.py  psnames.py
lib/silfont/: UFOlib.py  UFOlibtest.py  __init__.py  comp.py  complib.py  composites.py  core.py  etutil.py  feaplus.py  feax_ast.py  feax_lexer.py  feax_parser.py  framework.py  ftml.py  ftml_builder.py  genlib.py  gfr.py  harfbuzz.py  ipython.py  param.py  ufo.py  util.py
lib/silfont/data/: required_chars.csv
lib/silfont/fbtests/: common.py  silnotcjk.py  silttfchecks.py  ttfchecks.py
lib/silfont/fontforge/: XmlFF.py  __init__.py  framework.py
lib/silfont/ftml/: ftml.py
lib/silfont/gdl/: font.py  glyph.py  psnames.py
lib/silfont/makegdl/: font.py  glyph.py  ot.py  psnames.py
lib/silfont/scripts/: FFchangeGlyphNames.py  FFremoveAllOverlaps.py  FTMLcreateOdt.py  GDLchangeNames.py  UFObuildComp.py  UFOconvert.py  UFOcopyMeta.py  UFOexpandStroke.py  UFOexportAnchors.py  UFOexportPSnames.py  UFOloadGlyphOrder.py  UFOsetAssocUIDs.py  buildfea.py  (+71 more)
preflight/: update-preflight-libs-pyenv  update-preflight-libs-pyenv.sh  update-preflight-libs.sh
scripts/: CDconvFromXml.py  CDconvToXml.py  FFcolourGlyphs.py  FFcompareFonts.py  FFlistGlyphNames.py  FFlistGlyphinfo.py  FFnameSearchNReplace.py  FFsetPSNames.py  FLWriteXml.py  FTML.md  UFObuildComp.py  UFOconvert  UFOconvert.py  UFOexportAnchors.py  UFOexportPSnames.py  UFOexportUnicodes.py  UFOloadGlyphOrder.py  UFOsetAssocFeat.py  UFOsetAssocUIDs.py  UFOsetPSnames.py  UFOsetUnicodes.py  makeGdl  ttfaddemptyot.py
scripts/actionsosx/: README.txt
scripts/anchor/: FFfromAP.py  FFlistAPNum.py  UFOaddAnchors.py  makeGdl
scripts/comp/: CDtoUFO.py  FFlistRefNum.py  UFObuildComp.py  convCDfromXml.py  convCDtoXml.py
scripts/encode/: FFcheckDupUSV.py  FFcopyGlyphs.py  FFdblEncode.py  FFundblEncode.py
scripts/examples/: FFcopyGlyphs.py  FFmapGdlNames.py  FFmapGdlNames2.py  FLWriteXml.py  FTMLnorm.py  FTaddEmptyOT.py  UFOaddGlyphDemo.py  chaindemo.py  chaintest1.py  chaintest2.py  preflight  ttfaddemptyot.py  xmlDemo.py
scripts/fonttest/: ftml-chart.xsl  ftml-waterfall.xsl  ftml-wf4col.xsl  ftml.dtd  ftml.md  ftml.xsl  ftml2.xsl
scripts/norm/: RFBnormCompAnc.py  RFBnormData.py  RFBnormFormat.py
scripts/outline/: FFRemoveOverlapAll.py
scripts/samples/: UFOaddGlyphDemo.py  UFOdemo.py  UFOnormdemo.py  UFOtest.py  UFOtest2.py  UFOtest4.py  UFOtestlib1.py  UFOtestlib2.py  demoAddToMenu.py  demoExecuteScript.py  demoFunctions.py  executeDemo.py  norm  norm.py  normFF  rtripFF.py  rtripRFab.py  xmlDemo.py
scripts/tools/: FFRemoveOverlapAll.py  FFchangeGlyphNames.py  FFsetPostNames.py  GDLchangeNames.py  UFOaddAnchors.py  UFObuildComp.py  UFOexportUnicodes.py  UFOloadGlyphOrder.py  UFOpsnamesmap.py  UFOsetAssocFeat.py  UFOsetAssocUIDs.py  UFOsetPSnames.py  convCDfromXml.py  convCDtoXml.py  ftml-LO.py  ftml-chart.xsl  ftml-waterfall.xsl  ftml-wf4col.xsl  ftml.xsl  ftml2odt.py
src/silfont/: __init__.py  comp.py  core.py  etutil.py  feax_ast.py  feax_parser.py  ftml.py  ftml_builder.py  gfr.py  harfbuzz.py  ipython.py  ufo.py  util.py
tests/: Charis-Reg-make_fea.fea  Charis-test-commit-SHA.txt  localufos.csv.sample  resetReferenceLogs.py  resetreferencelogs.py  runlocalufotests.py  runmakefeatests.py  setupTestdata.py  setuplocalufotests.py  setuptestdata.py  test-pos-baseClass-to-mark.feax  test-pos-markClass-to-mark.feax  test-psfmakefea.sh  test-sub-1-to-many.feax  test-sub-many-to-1.feax
tests/fea/: test1_in.feax  test1_ref.fea  test2_in.feax  test2_ref.fea
tests/fontparts/: test_10_psfbuildcompgc.py
tests/input/: issue65.feax  ligatures.feax  psfbuildcomp.txt  psfcopyglyphs.csv  psfgenftml.csv  psfmakefea_3.feax  psfmakewoffmetadata.txt  psfsetassocuids.csv  psfsubset.csv
tests/results/: classes-ref.fea  features-ref.fea  test-pos-baseClass-to-mark-ref.fea  test-pos-markClass-to-mark-ref.fea  test-sub-1-to-many-ref.fea  test-sub-many-to-1-ref.fea
tests/ufo/: test_10_psfbuildcomp.py  test_12_psfbuildcompgc.py  test_16_psfchangettfglyphnames.py  test_18_psfcheckbasicchars.py  test_23_psfcopyglyphs.py  test_30_psfdeleteglyphs.py  test_34_psfexportanchors.py  test_36_psfexportunicodes.py  test_38_psfgenftml.py  test_40_psfexportanchors.py  test_40_psfglyphs2ufo.py  test_42_psfmakefea.py  test_44_psfmakewoffmetatdata.py  test_46_psfrenameglyphs.py  test_50_psfsetassocfeat.py  test_52_psfsetassocuids.py  test_54_psfsetglyphorder.py  test_56_psfsetkeys.py  test_60_psfsetpsnames.py  test_62_psfsetunicodes.py  test_70_psfmakefea.py  test_80_psfsyncmasters.py  test_88_psfufo2ttf.py  test_99_normalize.py  test_99_psfnormalize.py
(+2237 files in other folders)
