[options]
package_dir = 
	=src
packages = ['silfont', 'silfont.scripts', 'silfont.fbtests', 'silfont.data']
include_package_data = True
platforms = ['Linux','Win32','Mac OS X']
setup_requires =
    setuptools
    setuptools_scm

[options.package_data]
silfont.data = {"silfont": [data/*.*"]}

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[sdist]
formats = zip
